-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 16
-
Component/s: hotspot
-
b23
-
aarch64
-
linux
The following test failed in the JDK16 CI:
runtime/cds/appcds/javaldr/GCDuringDump.java
Here's a snippet from the log file:
[13.785s][info ][exceptions] Exception <a 'java/lang/OutOfMemoryError'{0x00002000000430e8}> (0x00002000000430e8)
thrown [/opt/mach5/mesos/work_dir/slaves/4728e7c1-7e67-490e-be0f-6bbf2a2f33db-S137/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/90d66529-0a72-4d5d-ab9a-481bde0dc331/runs/f3b3f867-70fa-48b6-8bac-2d0e06d7b312/workspace/open/src/hotspot/share/gc/shared/memAllocator.cpp, line 136]
for thread 0x0000fffcfc029f70
[13.785s][debug][exceptions] Thread::clear_pending_exception: cleared exception:java.lang.OutOfMemoryError
[13.785s][debug][exceptions] {0x00002000000430e8} - klass: 'java/lang/OutOfMemoryError'
[13.785s][debug][exceptions] - ---- fields (total size 7 words):
[13.785s][debug][exceptions] - private transient 'depth' 'I' @12 0
[13.785s][debug][exceptions] - private transient 'backtrace' 'Ljava/lang/Object;' @16 NULL (0 0)
[13.785s][debug][exceptions] - private 'detailMessage' 'Ljava/lang/String;' @24 "Java heap space"{0x00002000000432a8} (432a8 2000)
[13.785s][debug][exceptions] - private 'cause' 'Ljava/lang/Throwable;' @32 NULL (0 0)
[13.785s][debug][exceptions] - private 'stackTrace' '[Ljava/lang/StackTraceElement;' @40 NULL (0 0)
[13.785s][debug][exceptions] - private strict 'suppressedExceptions' 'Ljava/util/List;' @48 NULL (0 0)
[13.852s][info ][exceptions] Exception <a 'java/lang/OutOfMemoryError'{0x00002000000430e8}> (0x00002000000430e8)
thrown [/opt/mach5/mesos/work_dir/slaves/4728e7c1-7e67-490e-be0f-6bbf2a2f33db-S137/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/90d66529-0a72-4d5d-ab9a-481bde0dc331/runs/f3b3f867-70fa-48b6-8bac-2d0e06d7b312/workspace/open/src/hotspot/share/gc/shared/memAllocator.cpp, line 136]
for thread 0x0000fffcfc029f70
[13.852s][error][cds ] Preload Error: Failed to load java/lang/Byte$ByteCache
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/heapShared.cpp:1038
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/4728e7c1-7e67-490e-be0f-6bbf2a2f33db-S137/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/90d66529-0a72-4d5d-ab9a-481bde0dc331/runs/f3b3f867-70fa-48b6-8bac-2d0e06d7b312/workspace/open/src/hotspot/share/memory/heapShared.cpp:1038), pid=22387, tid=22390
# assert(k != __null && !(((ThreadShadow*)__the_thread__)->has_pending_exception())) failed: class must exist
#
# JRE version: Java(TM) SE Runtime Environment (16.0+20) (fastdebug build 16-ea+20-1016)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 16-ea+20-1016, interpreted mode, tiered, z gc, linux-aarch64)
# Problematic frame:
# V [libjvm.so+0xc1c468] HeapShared::init_subgraph_entry_fields(Thread*)+0x808
#
# Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /scratch/opt/mach5/mesos/work_dir/slaves/4076d11c-c6ed-4d07-84c1-4ab8d55cd975-S106755/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/1bc35e81-8c4f-4a50-a977-20518bc36923/runs/559ba2be-842c-429f-8272-c9a7bd99e776/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_runtime/scratch/2/core.22387)
#
# An error report file with more information is saved as:
# /scratch/opt/mach5/mesos/work_dir/slaves/4076d11c-c6ed-4d07-84c1-4ab8d55cd975-S106755/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/1bc35e81-8c4f-4a50-a977-20518bc36923/runs/559ba2be-842c-429f-8272-c9a7bd99e776/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_runtime/scratch/2/hs_err_pid22387.log
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
];
stderr: [*** java.lang.instrument ASSERTION FAILED ***: "!errorOutstanding" with message can't create name string at /opt/mach5/mesos/work_dir/slaves/4728e7c1-7e67-490e-be0f-6bbf2a2f33db-S137/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/90d66529-0a72-4d5d-ab9a-481bde0dc331/runs/f3b3f867-70fa-48b6-8bac-2d0e06d7b312/workspace/open/src/java.instrument/share/native/libinstrument/JPLISAgent.c line: 827
*** java.lang.instrument ASSERTION FAILED ***: "!errorOutstanding" with message can't create name string at /opt/mach5/mesos/work_dir/slaves/4728e7c1-7e67-490e-be0f-6bbf2a2f33db-S137/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/90d66529-0a72-4d5d-ab9a-481bde0dc331/runs/f3b3f867-70fa-48b6-8bac-2d0e06d7b312/workspace/open/src/java.instrument/share/native/libinstrument/JPLISAgent.c line: 827
]
exitValue = 134
Here's the crashing thread's stack:
--------------- T H R E A D ---------------
Current thread (0x0000fffcfc029f70): JavaThread "main" [_thread_in_vm, id=22390, stack(0x0000fffd029c0000,0x0000fffd02bc0000)]
Stack: [0x0000fffd029c0000,0x0000fffd02bc0000], sp=0x0000fffd02bbd4e0, free space=2037k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xc1c468] HeapShared::init_subgraph_entry_fields(Thread*)+0x808
V [libjvm.so+0x112f798] MetaspaceShared::preload_and_dump(Thread*)+0x1d8
V [libjvm.so+0x151d064] Threads::create_vm(JavaVMInitArgs*, bool*)+0x774
V [libjvm.so+0xdfe7e0] JNI_CreateJavaVM+0xb0
C [libjli.so+0x3810] JavaMain+0x7c
C [libjli.so+0x7330] ThreadJavaMain+0xc
C [libpthread.so.0+0x7d40] start_thread+0xb4
Since we crashed in HeapShared::init_subgraph_entry_fields()
I'm starting this bug off in hotspot/runtime for initial triage.
runtime/cds/appcds/javaldr/GCDuringDump.java
Here's a snippet from the log file:
[13.785s][info ][exceptions] Exception <a 'java/lang/OutOfMemoryError'{0x00002000000430e8}> (0x00002000000430e8)
thrown [/opt/mach5/mesos/work_dir/slaves/4728e7c1-7e67-490e-be0f-6bbf2a2f33db-S137/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/90d66529-0a72-4d5d-ab9a-481bde0dc331/runs/f3b3f867-70fa-48b6-8bac-2d0e06d7b312/workspace/open/src/hotspot/share/gc/shared/memAllocator.cpp, line 136]
for thread 0x0000fffcfc029f70
[13.785s][debug][exceptions] Thread::clear_pending_exception: cleared exception:java.lang.OutOfMemoryError
[13.785s][debug][exceptions] {0x00002000000430e8} - klass: 'java/lang/OutOfMemoryError'
[13.785s][debug][exceptions] - ---- fields (total size 7 words):
[13.785s][debug][exceptions] - private transient 'depth' 'I' @12 0
[13.785s][debug][exceptions] - private transient 'backtrace' 'Ljava/lang/Object;' @16 NULL (0 0)
[13.785s][debug][exceptions] - private 'detailMessage' 'Ljava/lang/String;' @24 "Java heap space"{0x00002000000432a8} (432a8 2000)
[13.785s][debug][exceptions] - private 'cause' 'Ljava/lang/Throwable;' @32 NULL (0 0)
[13.785s][debug][exceptions] - private 'stackTrace' '[Ljava/lang/StackTraceElement;' @40 NULL (0 0)
[13.785s][debug][exceptions] - private strict 'suppressedExceptions' 'Ljava/util/List;' @48 NULL (0 0)
[13.852s][info ][exceptions] Exception <a 'java/lang/OutOfMemoryError'{0x00002000000430e8}> (0x00002000000430e8)
thrown [/opt/mach5/mesos/work_dir/slaves/4728e7c1-7e67-490e-be0f-6bbf2a2f33db-S137/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/90d66529-0a72-4d5d-ab9a-481bde0dc331/runs/f3b3f867-70fa-48b6-8bac-2d0e06d7b312/workspace/open/src/hotspot/share/gc/shared/memAllocator.cpp, line 136]
for thread 0x0000fffcfc029f70
[13.852s][error][cds ] Preload Error: Failed to load java/lang/Byte$ByteCache
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/heapShared.cpp:1038
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/4728e7c1-7e67-490e-be0f-6bbf2a2f33db-S137/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/90d66529-0a72-4d5d-ab9a-481bde0dc331/runs/f3b3f867-70fa-48b6-8bac-2d0e06d7b312/workspace/open/src/hotspot/share/memory/heapShared.cpp:1038), pid=22387, tid=22390
# assert(k != __null && !(((ThreadShadow*)__the_thread__)->has_pending_exception())) failed: class must exist
#
# JRE version: Java(TM) SE Runtime Environment (16.0+20) (fastdebug build 16-ea+20-1016)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 16-ea+20-1016, interpreted mode, tiered, z gc, linux-aarch64)
# Problematic frame:
# V [libjvm.so+0xc1c468] HeapShared::init_subgraph_entry_fields(Thread*)+0x808
#
# Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /scratch/opt/mach5/mesos/work_dir/slaves/4076d11c-c6ed-4d07-84c1-4ab8d55cd975-S106755/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/1bc35e81-8c4f-4a50-a977-20518bc36923/runs/559ba2be-842c-429f-8272-c9a7bd99e776/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_runtime/scratch/2/core.22387)
#
# An error report file with more information is saved as:
# /scratch/opt/mach5/mesos/work_dir/slaves/4076d11c-c6ed-4d07-84c1-4ab8d55cd975-S106755/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/1bc35e81-8c4f-4a50-a977-20518bc36923/runs/559ba2be-842c-429f-8272-c9a7bd99e776/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_runtime/scratch/2/hs_err_pid22387.log
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
];
stderr: [*** java.lang.instrument ASSERTION FAILED ***: "!errorOutstanding" with message can't create name string at /opt/mach5/mesos/work_dir/slaves/4728e7c1-7e67-490e-be0f-6bbf2a2f33db-S137/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/90d66529-0a72-4d5d-ab9a-481bde0dc331/runs/f3b3f867-70fa-48b6-8bac-2d0e06d7b312/workspace/open/src/java.instrument/share/native/libinstrument/JPLISAgent.c line: 827
*** java.lang.instrument ASSERTION FAILED ***: "!errorOutstanding" with message can't create name string at /opt/mach5/mesos/work_dir/slaves/4728e7c1-7e67-490e-be0f-6bbf2a2f33db-S137/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/90d66529-0a72-4d5d-ab9a-481bde0dc331/runs/f3b3f867-70fa-48b6-8bac-2d0e06d7b312/workspace/open/src/java.instrument/share/native/libinstrument/JPLISAgent.c line: 827
]
exitValue = 134
Here's the crashing thread's stack:
--------------- T H R E A D ---------------
Current thread (0x0000fffcfc029f70): JavaThread "main" [_thread_in_vm, id=22390, stack(0x0000fffd029c0000,0x0000fffd02bc0000)]
Stack: [0x0000fffd029c0000,0x0000fffd02bc0000], sp=0x0000fffd02bbd4e0, free space=2037k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xc1c468] HeapShared::init_subgraph_entry_fields(Thread*)+0x808
V [libjvm.so+0x112f798] MetaspaceShared::preload_and_dump(Thread*)+0x1d8
V [libjvm.so+0x151d064] Threads::create_vm(JavaVMInitArgs*, bool*)+0x774
V [libjvm.so+0xdfe7e0] JNI_CreateJavaVM+0xb0
C [libjli.so+0x3810] JavaMain+0x7c
C [libjli.so+0x7330] ThreadJavaMain+0xc
C [libpthread.so.0+0x7d40] start_thread+0xb4
Since we crashed in HeapShared::init_subgraph_entry_fields()
I'm starting this bug off in hotspot/runtime for initial triage.
- relates to
-
JDK-8254346 ZGC runs out of memory with appcds GCDuringDump.java on linux/aarch64
-
- Resolved
-
-
JDK-8255784 appcds/javaldr/ExceptionDuringDumpAtObjectsInitPhase.java test failed resulting in VM crash
-
- Resolved
-