8254309: appcds GCDuringDump.java failed - class must exist